build/deploy/caddy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: youcanbenefit-caddy
  namespace: youcanbenefit
  labels:
    app: youcanbenefit-caddy
    technology: go
    tier: frontend
    product: youcanbenefit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youcanbenefit-caddy
      technology: go
      tier: frontend
      product: youcanbenefit
  template:
    metadata:
      labels:
        app: youcanbenefit-caddy
        technology: go
        tier: frontend
        product: youcanbenefit
    spec:
      containers:
      - name: youcanbenefit-caddy
        image: cityofedmonton/youcanbenefit-caddy:0.0.5
        ports:
        - containerPort: 80
