build/deploy/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youcanbenefit-caddy-service
  labels:
    app: youcanbenefit-caddy-service
    technology: go
    tier: frontend
    product: youcanbenefit
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: youcanbenefit-caddy
    technology: go
    tier: frontend
    product: youcanbenefit
  type: NodePort
