build/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: youcanbenefit-ingress
  namespace: youcanbenefit
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - youcanbenefit.edmonton.ca
    secretName: production-tls
  rules:
  - host: youcanbenefit.edmonton.ca
    http:
      paths:
      - backend:
          serviceName: youcanbenefit-caddy-service
          servicePort: 80
